@@ -12,6 +12,7 @@ pycdf
  - istp.VariableChecks adds check for DELTA attributes
  - istp.VariableChecks and FileChecks add check for empty attribute Entries
  - istp.VarBundle class to copy variables, slices, and depends between CDFs
+ - istp.nanfill function to replace fill values with NaN
 pybats
  - Updated gitm.GitmBin reader to fix failures in Python 3.x.
 toolbox
